[package]
name = "polkadot_data_viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
serde_json = "1.0.107"
anyhow = "1.0.75"
colored = "2.0.4"
once_cell = "1.18.0"
